<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    tools:context=".MenuProfesor">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="Opciones"
        android:src="@drawable/ranura"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="246dp"
        android:layout_height="309dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:src="@drawable/logo_welcome" />

    <Button
        android:id="@+id/btnQR"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:backgroundTint="#000000"
        android:text="@string/reg"
        android:onClick="Llamar_Qrs"
        app:cornerRadius="40dp" />
    <Button
        android:id="@+id/btnAsignaturas"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#000000"
        android:layout_marginTop="20dp"
        app:cornerRadius="40dp"
        android:layout_gravity="center"
        android:onClick="Llamar_asignaturas"
        android:text="@string/Asignaturas" />

    <Button
        android:id="@+id/btnAsistencia"
        android:layout_width="255dp"
        android:layout_height="45dp"
        app:cornerRadius="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:backgroundTint="#000000"
        android:onClick="Llamar_asistencia"
        android:text="@string/ListaAsistencia" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Profe"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        ></TextView>


</LinearLayout>