<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    tools:context=".ListaAsistencia">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Asistencia"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"

        ></TextView>

    <EditText
        android:layout_width="306dp"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:id="@+id/edtFecha"
        android:textColorHint="@color/black"
        android:background="@color/white"
        android:textColor="@color/black"
        android:hint="@string/Fecha"
        ></EditText>

    <EditText
        android:layout_width="308dp"
        android:layout_height="43dp"
        android:id="@+id/edtSeccion"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/Seccion"
        ></EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:id="@+id/btnBuscar"
        android:backgroundTint="#000000"
        android:text="@string/Buscar"
        android:textSize="15dp"
        app:cornerRadius="30dp"></Button>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="383dp"
        android:layout_height="6dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="#020202"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerAsistencia">

    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>