<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    tools:context=".Opciones">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="252dp"
        android:layout_height="283dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:src="@drawable/logo_welcome" />



    <Switch
        android:id="@+id/switch1"
        android:layout_width="201dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:text="@string/colo"
        android:textColor="@color/white"
        android:layout_marginLeft="30dp"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="4dp"
        android:layout_marginTop="4dp"
        android:background="#020202" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Idioma"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="30dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdbIngles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#000000"
            android:layout_marginLeft="70dp"
            android:textColor="@color/white"
            android:text="Ingles" />

        <RadioButton
            android:id="@+id/rdbEspanol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:buttonTint="#000000"
            android:text="Español"
            android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="4dp"
        android:layout_marginTop="4dp"
        android:background="#020202" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Valorar"
        android:layout_marginLeft="30dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />


    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:contentDescription="Califica esta aplicación"
        android:numStars="5"
        android:rating="0"
        android:stepSize="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:onClick="Enviar_Respuesta"
        android:text="@string/Enviar"></Button>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_back2" />

</LinearLayout>