<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuEstudiante"
    android:background="@color/fondo">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ranura"
        android:onClick="Opciones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="246dp"
        android:layout_height="309dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/logo_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnScanQR"
        android:layout_width="280dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#000000"
        android:text="@string/sacan"
        android:textColor="@color/white"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAsignaturas" />

    <Button
        android:id="@+id/btnAsignaturas"
        android:layout_width="280dp"
        android:layout_height="65dp"
        android:layout_marginBottom="260dp"
        android:backgroundTint="#000000"
        android:text="@string/Asignaturas"
        android:textColor="@color/white"
        android:onClick="Asignatura"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Estudiante"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnScanQR"
        app:layout_constraintVertical_bias="0.524" />

</androidx.constraintlayout.widget.ConstraintLayout>